--- a/css/reset.css
+++ b/css/reset.css
@@ -13,3 +13,12 @@ color: inherit;
 ul {
 list-style-type: none;
 }
+
+.container {
+    max-width: 800px;
+    height: 100%;
+    position: relative;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: auto;
+}
