--- a/css/zz.css
+++ b/css/zz.css
@@ -1,6 +1,12 @@
-.header{
+body {
+    font-family: 'Noto Sans TC', sans-serif;
+    font-size: 16px;
+}
+
+.header {
     padding-top: 10px;
     padding-bottom: 10px;
+    border-bottom: 2px solid #cecece;
 }
 
 .header-wrap {
@@ -35,28 +41,69 @@
     color: rgb(14, 60, 160);
 }
 
-
-
-
-
-
-
-.ff {
+.header .menu ul {
     display: flex;
-    height: 100px;
+    align-items: center;
+    gap: 15px;
 }
 
-.f1 {
-    flex: 1;
-    background: red;
+.header .left-side {
+    position: relative;
+    padding-right: 30px;
+    margin-right: 15px;
 }
 
-.f2 {
-    flex: 2;
-    background-color: yellow;
+.header .left-side::after {
+    content: "";
+    position: absolute;
+    right: 0;
+    top: 15%;
+    height: 70%;
+    width: 2px;
+    background: #cecece;
 }
 
-.w100 {
-    width: 100px;
-    background: blue;
+.main {
+    height: 150vh;
+}
+
+.footer {
+    background: #fafafa;
+    border-top: 2px solid #cecece;
+
+}
+
+.footer .copyright {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+    border-top: 2px solid #cecece;
+}
+
+.footer .copyright .copyright-icon {
+    margin-right: 5px;
+}
+
+.footer .top-side {
+    display: flex;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    gap: 60px;
+}
+
+.footer .menu {
+    display: flex;
+    gap: 60px;
+}
+
+.footer .menu .menu-title{
+    font-size: 1.1rem;
+    margin-bottom: 20px;
+}
+
+.footer .menu-item{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
