--- a/css/main.css
+++ b/css/main.css
@@ -85,3 +85,27 @@ img {
 .product-information-text {
     flex: 1;
 }
+.category{
+    padding: 0 20px;
+    color: crimson;
+    font-size: 48px;
+}
+.category-nav {
+    display: flex;
+    gap: 20px;
+    padding: 0 20px;
+}
+
+.category-nav li {
+    position: relative;
+}
+
+.category-nav li::after {
+    content: '\\';
+    position: absolute;
+    right: -14px;
+}
+.category-nav li:last-child:after{
+    display: none;
+}
+
