--- a/js_countdown.css
+++ b/js_countdown.css
@@ -14,7 +14,7 @@
 .countdown-item {
     width: 200px;
     height: 190px;
-    border: 4px solid #e654b5;
+    border: 4px solid #e66d9f;
     border-radius: 8px;
     color: #d85189;
     display: flex;
